--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:focusableInTouchMode="true"
         android:focusable="true" 
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+     />
 
 </FrameLayout>
