--- a/res/layout/activity_builder.xml
+++ b/res/layout/activity_builder.xml
@@ -2,7 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@android:color/white" >
-
+	
     <ScrollView
         android:id="@+id/ScrollView1"
         android:layout_width="fill_parent"
@@ -14,6 +14,9 @@
             android:layout_height="wrap_content"
             android:background="@drawable/jupiter2"
             android:orientation="vertical" >
+
+            
+
         </LinearLayout>
 
         // place your all scrollable views here.
@@ -112,5 +115,15 @@
 
 </LinearLayout>
     </HorizontalScrollView>
+
+<TextView
+    android:id="@+id/textView1"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentTop="true"
+    android:background="#22000000"
+    android:text="0:0-0:0"
+    android:textColor="#FFFFFF" />
 
 </RelativeLayout>
