--- a/res/layout/activity_builder.xml
+++ b/res/layout/activity_builder.xml
@@ -28,8 +28,7 @@
     <ListView
         android:id="@+id/listView1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/horizontalScrollView1"
+        android:layout_height="wrap_content"
         android:divider="@null"
         android:dividerHeight="0dp"
         tools:listitem="@layout/map_row_item" >
