--- a/res/layout/map_row_item.xml
+++ b/res/layout/map_row_item.xml
@@ -3,6 +3,7 @@
     android:id="@+id/ImageCity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:showDividers="none"
     android:orientation="vertical" >
 
 </LinearLayout>
