--- a/res/layout/map_row_item.xml
+++ b/res/layout/map_row_item.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ImageCity"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:showDividers="none"
-    android:orientation="vertical" >
 
-</LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ImageCity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:showDividers="none" >
+
+        <ImageView
+            android:id="@+id/mapimg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            />
+    </LinearLayout>
