--- a/res/layout-land/activity_builder.xml
+++ b/res/layout-land/activity_builder.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:background="@android:color/white" >
 
-    <ListView
+    <fr.esipe.game.util.MapListView
         android:id="@+id/listView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +13,7 @@
         android:dividerHeight="0dp"
         tools:listitem="@layout/map_row_item" >
 
-    </ListView>
+    </fr.esipe.game.util.MapListView>
 
     <ScrollView
         android:id="@+id/horizontalScrollView1"
