--- a/res/layout/activity_builder.xml
+++ b/res/layout/activity_builder.xml
@@ -12,7 +12,10 @@
         android:layout_height="wrap_content"
         android:divider="@null"
         android:dividerHeight="0dp"
-        tools:listitem="@layout/map_row_item" >
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/horizontalScrollView1"
+        tools:listitem="@layout/map_row_item" 
+        >
     </fr.esipe.game.util.MapListView>
 
     <HorizontalScrollView
@@ -30,6 +33,7 @@
 
             <ImageView
                 android:id="@+id/imageView1"
+                android:tag="spaceship1:missile"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/spaceship1" />
@@ -47,7 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView1"
-                android:src="@drawable/spaceship1" />
+                android:src="@drawable/spaceship1"
+                android:tag="spaceship1:fireball" />
 
             <ImageView
                 android:id="@+id/imageView2a"
@@ -62,6 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView2"
+                android:tag="spaceship1:shibooleet"
                 android:src="@drawable/spaceship1" />
 
             <ImageView
@@ -77,7 +83,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView3"
-                android:src="@drawable/spaceship2" />
+                android:src="@drawable/spaceship2" 
+                android:tag="spaceship2:missile"/>
 
             <ImageView
                 android:id="@+id/imageView4a"
@@ -92,7 +99,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView4"
-                android:src="@drawable/spaceship2" />
+                android:src="@drawable/spaceship2" 
+                android:tag="spaceship2:fireball"/>
 
             <ImageView
                 android:id="@+id/imageView5a"
@@ -107,7 +115,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView5"
-                android:src="@drawable/spaceship2" />
+                android:src="@drawable/spaceship2"
+                android:tag="spaceship2:shibooleet" />
 
             <ImageView
                 android:id="@+id/imageView6a"
@@ -122,6 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/spaceship3" 
+                android:tag="spaceship3:missile"
                 android:layout_toRightOf="@id/imageView6"/>
 			<ImageView
                 android:id="@+id/imageView7a"
@@ -137,6 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/spaceship3" 
+                android:tag="spaceship3:fireball"
                 android:layout_toRightOf="@id/imageView7"/>
 			<ImageView
                 android:id="@+id/imageView8a"
@@ -152,6 +163,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/spaceship3" 
+                android:tag="spaceship3:shibooleet"
                 android:layout_toRightOf="@id/imageView8"/>
 			<ImageView
                 android:id="@+id/imageView9a"
@@ -168,6 +180,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/boss1" 
+                android:tag="spaceship4:missile"
                 android:layout_toRightOf="@id/imageView9"/>
 			<ImageView
                 android:id="@+id/imageView10a"
@@ -182,6 +195,7 @@
                 android:id="@+id/imageView11"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:tag="spaceship4:fireball"
                 android:src="@drawable/boss1" 
                 android:layout_toRightOf="@id/imageView10"/>
 			<ImageView
@@ -198,6 +212,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/boss1" 
+                android:tag="spaceship4:shibooleet"
                 android:layout_toRightOf="@id/imageView11"/>
 			<ImageView
                 android:id="@+id/imageView12a"
