--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -4,33 +4,49 @@
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
-  <Button
-    android:id="@+id/jouer"
-    android:layout_width="188dip"
-    android:layout_height="100dip"
-    android:text="Jouer"
-    android:layout_centerInParent="true"
-    android:textSize="48sp" android:textStyle="bold" />
 
   <Button
-    android:id="@+id/builder"
-    android:layout_width="188dip"
-    android:layout_height="100dip"
-    android:text="Builder"
-    android:layout_centerHorizontal="true"
-    android:layout_above="@id/jouer"
-    android:layout_marginBottom="30dip"
-    android:textSize="48sp" android:textStyle="bold" />
+      android:id="@+id/quitter"
+      android:layout_width="188dip"
+      android:layout_height="100dip"
+      android:layout_alignLeft="@+id/importer"
+      android:layout_alignParentBottom="true"
+      android:layout_marginBottom="27dp"
+      android:text="Quitter"
+      android:textSize="48sp"
+      android:textStyle="bold" />
 
   <Button
-    android:id="@+id/quitter"
-    android:layout_width="188dip"
-    android:layout_height="100dip"
-    android:text="Quitter"
-    android:layout_centerHorizontal="true"
-    android:layout_below="@id/jouer"
-    android:layout_marginTop="30dip"
-    android:textSize="48sp" android:textStyle="bold" />
+      android:id="@+id/importer"
+      android:layout_width="188dip"
+      android:layout_height="100dip"
+      android:layout_above="@+id/quitter"
+      android:layout_alignLeft="@+id/builder"
+      android:layout_marginBottom="16dp"
+      android:text="Import"
+      android:textSize="48sp"
+      android:textStyle="bold" />
 
+  <Button
+      android:id="@+id/jouer"
+      android:layout_width="188dip"
+      android:layout_height="100dip"
+      android:layout_above="@+id/importer"
+      android:layout_alignLeft="@+id/importer"
+      android:layout_marginBottom="16dp"
+      android:text="Jouer"
+      android:textSize="48sp"
+      android:textStyle="bold" />
+
+  <Button
+      android:id="@+id/builder"
+      android:layout_width="188dip"
+      android:layout_height="100dip"
+      android:layout_above="@+id/jouer"
+      android:layout_centerHorizontal="true"
+      android:layout_marginBottom="19dp"
+      android:text="Builder"
+      android:textSize="48sp"
+      android:textStyle="bold" />
 
 </RelativeLayout>
