--- a/res/layout/activity_menu.xml
+++ b/res/layout/activity_menu.xml
@@ -6,24 +6,24 @@
  >
 
   <Button
-      android:id="@+id/quitter"
+      android:id="@+id/builder"
       android:layout_width="188dip"
       android:layout_height="100dip"
-      android:layout_alignLeft="@+id/importer"
-      android:layout_alignParentBottom="true"
-      android:layout_marginBottom="27dp"
-      android:text="Quitter"
+      android:layout_alignParentTop="true"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="55dp"
+      android:text="Builder"
       android:textSize="48sp"
       android:textStyle="bold" />
 
   <Button
-      android:id="@+id/importer"
+      android:id="@+id/quitter"
       android:layout_width="188dip"
       android:layout_height="100dip"
-      android:layout_above="@+id/quitter"
-      android:layout_alignLeft="@+id/builder"
-      android:layout_marginBottom="16dp"
-      android:text="Import"
+      android:layout_alignLeft="@+id/jouer"
+      android:layout_below="@+id/jouer"
+      android:layout_marginTop="16dp"
+      android:text="Quitter"
       android:textSize="48sp"
       android:textStyle="bold" />
 
@@ -31,22 +31,32 @@
       android:id="@+id/jouer"
       android:layout_width="188dip"
       android:layout_height="100dip"
-      android:layout_above="@+id/importer"
-      android:layout_alignLeft="@+id/importer"
-      android:layout_marginBottom="16dp"
+      android:layout_alignLeft="@+id/builder"
+      android:layout_below="@+id/builder"
+      android:layout_marginTop="16dp"
       android:text="Jouer"
       android:textSize="48sp"
       android:textStyle="bold" />
 
   <Button
-      android:id="@+id/builder"
+      android:id="@+id/importLvl"
       android:layout_width="188dip"
-      android:layout_height="100dip"
-      android:layout_above="@+id/jouer"
-      android:layout_centerHorizontal="true"
-      android:layout_marginBottom="19dp"
-      android:text="Builder"
-      android:textSize="48sp"
+      android:layout_height="50dip"
+      android:layout_alignLeft="@+id/quitter"
+      android:layout_below="@+id/quitter"
+      android:layout_marginTop="16dp"
+      android:text="Import"
+      android:textSize="24sp"
       android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/exporter"
+        android:layout_width="188dip"
+        android:layout_height="50dip"
+        android:layout_alignLeft="@+id/importLvl"
+        android:layout_below="@+id/importLvl"
+        android:text="Export"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
