--- a/res/layout/activity_builder.xml
+++ b/res/layout/activity_builder.xml
@@ -34,10 +34,10 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:tag="spaceship1:missile"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/spaceship1" />
+                android:src="@drawable/spaceship1"
+                android:tag="spaceship1:missile" />
 
             <ImageView
                 android:id="@+id/imageView1a"
@@ -45,6 +45,7 @@
                 android:layout_height="25dp"
                 android:layout_alignBottom="@id/imageView1"
                 android:layout_alignRight="@id/imageView1"
+               
                 android:src="@drawable/weaponmissilea" />
 
             <ImageView
@@ -61,6 +62,7 @@
                 android:layout_height="25dp"
                 android:layout_alignBottom="@id/imageView2"
                 android:layout_alignRight="@id/imageView2"
+               
                 android:src="@drawable/weaponfireballa" />
 
             <ImageView
@@ -68,8 +70,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView2"
-                android:tag="spaceship1:shibooleet"
-                android:src="@drawable/spaceship1" />
+                android:src="@drawable/spaceship1"
+                android:tag="spaceship1:shibooleet" />
 
             <ImageView
                 android:id="@+id/imageView3a"
@@ -77,6 +79,7 @@
                 android:layout_height="25dp"
                 android:layout_alignBottom="@id/imageView3"
                 android:layout_alignRight="@id/imageView3"
+               
                 android:src="@drawable/weaponshibooleeta" />
 
             <ImageView
@@ -84,8 +87,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView3"
-                android:src="@drawable/spaceship2" 
-                android:tag="spaceship2:missile"/>
+                android:src="@drawable/spaceship2"
+                android:tag="spaceship2:missile" />
 
             <ImageView
                 android:id="@+id/imageView4a"
@@ -93,6 +96,7 @@
                 android:layout_height="25dp"
                 android:layout_alignBottom="@id/imageView4"
                 android:layout_alignRight="@id/imageView4"
+               
                 android:src="@drawable/weaponmissilea" />
 
             <ImageView
@@ -100,8 +104,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_toRightOf="@id/imageView4"
-                android:src="@drawable/spaceship2" 
-                android:tag="spaceship2:fireball"/>
+                android:src="@drawable/spaceship2"
+                android:tag="spaceship2:fireball" />
 
             <ImageView
                 android:id="@+id/imageView5a"
@@ -109,6 +113,7 @@
                 android:layout_height="25dp"
                 android:layout_alignBottom="@id/imageView5"
                 android:layout_alignRight="@id/imageView5"
+               
                 android:src="@drawable/weaponfireballa" />
 
             <ImageView
@@ -125,108 +130,112 @@
                 android:layout_height="25dp"
                 android:layout_alignBottom="@id/imageView6"
                 android:layout_alignRight="@id/imageView6"
+               
                 android:src="@drawable/weaponshibooleeta" />
-            
-                <ImageView
+
+            <ImageView
                 android:id="@+id/imageView7"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/spaceship3" 
-                android:tag="spaceship3:missile"
-                android:layout_toRightOf="@id/imageView6"/>
-			<ImageView
+                android:layout_toRightOf="@id/imageView6"
+                android:src="@drawable/spaceship3"
+                android:tag="spaceship3:missile" />
+
+            <ImageView
                 android:id="@+id/imageView7a"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/weaponmissilea"
                 android:layout_alignBottom="@id/imageView7"
-                android:layout_alignRight="@id/imageView7" 
-                
-                />
-			<ImageView
+                android:layout_alignRight="@id/imageView7"
+               
+                android:src="@drawable/weaponmissilea" />
+
+            <ImageView
                 android:id="@+id/imageView8"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/spaceship3" 
-                android:tag="spaceship3:fireball"
-                android:layout_toRightOf="@id/imageView7"/>
-			<ImageView
+                android:layout_toRightOf="@id/imageView7"
+                android:src="@drawable/spaceship3"
+                android:tag="spaceship3:fireball" />
+
+            <ImageView
                 android:id="@+id/imageView8a"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/weaponfireballa"
                 android:layout_alignBottom="@id/imageView8"
-                android:layout_alignRight="@id/imageView8" 
-                
-                />
-			<ImageView
+                android:layout_alignRight="@id/imageView8"
+               
+                android:src="@drawable/weaponfireballa" />
+
+            <ImageView
                 android:id="@+id/imageView9"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/spaceship3" 
-                android:tag="spaceship3:shibooleet"
-                android:layout_toRightOf="@id/imageView8"/>
-			<ImageView
+                android:layout_toRightOf="@id/imageView8"
+                android:src="@drawable/spaceship3"
+                android:tag="spaceship3:shibooleet" />
+
+            <ImageView
                 android:id="@+id/imageView9a"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/weaponshibooleeta"
                 android:layout_alignBottom="@id/imageView9"
-                android:layout_alignRight="@id/imageView9" 
-                
-                />
-			
-			    <ImageView
+                android:layout_alignRight="@id/imageView9"
+               
+                android:src="@drawable/weaponshibooleeta" />
+
+            <ImageView
                 android:id="@+id/imageView10"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/boss1" 
-                android:tag="spaceship4:missile"
-                android:layout_toRightOf="@id/imageView9"/>
-			<ImageView
+                android:layout_toRightOf="@id/imageView9"
+                android:src="@drawable/boss1"
+                android:tag="spaceship4:missile" />
+
+            <ImageView
                 android:id="@+id/imageView10a"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/weaponmissilea"
                 android:layout_alignBottom="@id/imageView10"
-                android:layout_alignRight="@id/imageView10" 
-                
-                />
-			<ImageView
+                android:layout_alignRight="@id/imageView10"
+               
+                android:src="@drawable/weaponmissilea" />
+
+            <ImageView
                 android:id="@+id/imageView11"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:tag="spaceship4:fireball"
-                android:src="@drawable/boss1" 
-                android:layout_toRightOf="@id/imageView10"/>
-			<ImageView
+                android:layout_toRightOf="@id/imageView10"
+                android:src="@drawable/boss1"
+                android:tag="spaceship4:fireball" />
+
+            <ImageView
                 android:id="@+id/imageView11a"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/weaponfireballa"
                 android:layout_alignBottom="@id/imageView11"
-                android:layout_alignRight="@id/imageView11" 
-                
-                />
-			<ImageView
+                android:layout_alignRight="@id/imageView11"
+               
+                android:src="@drawable/weaponfireballa" />
+
+            <ImageView
                 android:id="@+id/imageView12"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/boss1" 
-                android:tag="spaceship4:shibooleet"
-                android:layout_toRightOf="@id/imageView11"/>
-			<ImageView
+                android:layout_toRightOf="@id/imageView11"
+                android:src="@drawable/boss1"
+                android:tag="spaceship4:shibooleet" />
+
+            <ImageView
                 android:id="@+id/imageView12a"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/weaponshibooleeta"
                 android:layout_alignBottom="@id/imageView12"
-                android:layout_alignRight="@id/imageView12" 
-                
-                />
-			
-            
+                android:layout_alignRight="@id/imageView12"
+               
+                android:src="@drawable/weaponshibooleeta" />
         </RelativeLayout>
+
     </HorizontalScrollView>
 
     <TextView
