--- a/res/layout/activity_import.xml
+++ b/res/layout/activity_import.xml
@@ -5,12 +5,12 @@
         <TextView 
             android:id="@+id/lvlName"
             android:layout_width="wrap_content"
-            android:text="Name Level" 
+            android:text="@string/import_alert_title" 
             android:layout_height="wrap_content" 
             android:layout_weight="2">   
         </TextView>
         <Button 
-            android:text="OK"
+            android:text="@string/import_alert_description"
             android:enabled="false" 
             android:layout_width="wrap_content" 
             android:id="@+id/lvlImportButton" 
