--- a/res/layout/activity_builder.xml
+++ b/res/layout/activity_builder.xml
@@ -21,7 +21,7 @@
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView1"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@android:color/darker_gray" >
@@ -247,5 +247,11 @@
         android:background="#22000000"
         android:text="0:0-0:0"
         android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save" />
 
 </RelativeLayout>
